apps/staging/deanqx-com/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deanqx-com
  namespace: deanqx-com
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: deanqx-com
          image: ghcr.io/deanqx/deanqx.com:20260919-190417-ac1afb5 # {"$imagepolicy": "deanqx-com-staging:deanqx-com-staging"}
