apps/staging/deanqx-com/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: staging-deanqx-com-route
  namespace: deanqx-com-staging
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway-system
      sectionName: https-staging-deanqx-com
  hostnames:
    - "staging.deanqx.com"
  rules:
    - filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: Strict-Transport-Security
                value: "max-age=15552000"
              - name: X-Robots-Tag
                value: "noindex, nofollow, noarchive"
      backendRefs:
        - name: deanqx-com
          kind: Service
          port: 80
